force-app/main/default/objects/Strength_Factor__mdt/Strength_Factor__mdt.object-meta.xml
<CustomObject>
    <description>Defines one input factor for relationship strength calculation. Each record contributes a weighted value to the overall score. Admins can adjust weights, add custom factors (CSAT, NPS, etc.), or deactivate built-in factors.</description>
    <label>Strength Factor</label>
    <pluralLabel>Strength Factors</pluralLabel>
</CustomObject>