force-app/main/default/objects/Strength_Factor__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Grouping label for display in the factor breakdown UI (e.g. Activity, Satisfaction, Product Usage).</description>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>