force-app/main/default/objects/Strength_Factor__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable this factor without deleting it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>