force-app/main/default/objects/Strength_Factor__mdt/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <description>Optional ceiling for normalization. Raw value is divided by Max Value and capped at 1.0 before multiplying by weight. Leave blank to use the raw value directly.</description>
    <label>Max Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>