force-app/main/default/objects/Strength_Factor__mdt/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>How to retrieve the factor value. Interaction: built-in interaction counter. Contact_Field: numeric field on Contact. Record_Count: count of related child records.</description>
    <label>Source Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>