force-app/main/default/objects/Strength_Factor__mdt/fields/Source_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Value__c</fullName>
    <description>For Interaction: the counter key (email_sent, email_received, meeting, task, opp_role, co_occurrence). For Contact_Field: the field API name (e.g. CSAT_Score__c). For Record_Count: ObjectName.LookupField (e.g. Project__c.Contact__c).</description>
    <label>Source Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>