force-app/main/default/objects/Strength_Factor__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Multiplier for this factor's contribution to the relationship strength score.</description>
    <defaultValue>1.0</defaultValue>
    <label>Weight</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>